--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/adecd2bab8.js"></script>
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <title>Madis Tepp - Portfolio</title>
 </head>
+
 <body>
-    
+    <header>
+        <div class="row">
+            <div class="col header">
+                <p>Home</p>
+            </div>
+            <div class="col header">
+                <p>About</p>
+            </div>
+            <div class="col header">
+                <p>Portfolio</p>
+            </div>
+            <div class="col header">
+                <p>Contact</p>
+            </div>
+        </div>
+    </header>
+
+    <footer>
+        <div class="row">
+            <div class="col footer">
+                <p>Instagram</p>
+            </div>
+            <div class="col footer">
+                <p>Linkedin</p>
+            </div>
+            <div class="col footer">
+                <p>Facebook</p>
+            </div>
+            <div class="col footer">
+                <p>GitHub</p>
+            </div>
+        </div>
+    </footer>
+
+
 </body>
+
 </html>
