updated classes for header / footer

--- a/index.html
+++ b/index.html
@@ -7,40 +7,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/adecd2bab8.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Karla:200,200i,400,400i,700,700i,800,800i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <title>Madis Tepp - Portfolio</title>
 </head>
 
 <body>
     <header>
-        <div class="row">
-            <div class="col header">
+        <div class="row header">
+            <div class="col header-links">
                 <p>Home</p>
             </div>
-            <div class="col header">
+            <div class="col header-links">
                 <p>About</p>
             </div>
-            <div class="col header">
+            <div class="col header-links">
                 <p>Portfolio</p>
             </div>
-            <div class="col header">
+            <div class="col header-links">
                 <p>Contact</p>
             </div>
         </div>
     </header>
 
     <footer>
-        <div class="row">
-            <div class="col footer">
+        <div class="row footer">
+            <div class="col social-links">
                 <p>Instagram</p>
             </div>
-            <div class="col footer">
+            <div class="col social-links">
                 <p>Linkedin</p>
             </div>
-            <div class="col footer">
+            <div class="col social-links">
                 <p>Facebook</p>
             </div>
-            <div class="col footer">
+            <div class="col social-links">
                 <p>GitHub</p>
             </div>
         </div>
