changed header to navbarn

--- a/index.html
+++ b/index.html
@@ -14,35 +14,39 @@
 
 <body>
     <header>
-        <div class="row header">
-            <div class="col header-links">
-                <p>Home</p>
-            </div>
-            <div class="col header-links">
-                <p>About</p>
-            </div>
-            <div class="col header-links">
-                <p>Portfolio</p>
-            </div>
-            <div class="col header-links">
-                <p>Contact</p>
+        <div class="container container-fluid">
+            <div class="row navbar">
+                <div class="col navbar-links">
+                    <a href="#">Home</a>
+                </div>
+                <div class="col navbar-links">
+                    <a href="#">About</a>
+                </div>
+                <div class="col navbar-links">
+                    <a href="#">Portfolio</a>
+                </div>
+                <div class="col navbar-links">
+                    <a href="#">Portfolio</a>
+                </div>
             </div>
         </div>
     </header>
 
     <footer>
-        <div class="row footer">
-            <div class="col social-links">
-                <p>Instagram</p>
-            </div>
-            <div class="col social-links">
-                <p>Linkedin</p>
-            </div>
-            <div class="col social-links">
-                <p>Facebook</p>
-            </div>
-            <div class="col social-links">
-                <p>GitHub</p>
+        <div class="container container-fluid">
+            <div class="row footer">
+                <div class="col social-links">
+                    <a href="#">Instagram</a>
+                </div>
+                <div class="col social-links">
+                    <a href="#">Linkedin</a>
+                </div>
+                <div class="col social-links">
+                    <a href="#">Facebook</a>
+                </div>
+                <div class="col social-links">
+                    <a href="#">GitHub</a>
+                </div>
             </div>
         </div>
     </footer>
