--- a/index.html
+++ b/index.html
@@ -16,17 +16,22 @@
     <header>
         <div class="container container-fluid">
             <div class="row navbar">
-                <div class="col navbar-links">
-                    <a href="#">Home</a>
-                </div>
-                <div class="col navbar-links">
-                    <a href="#">About</a>
-                </div>
-                <div class="col navbar-links">
-                    <a href="#">Portfolio</a>
-                </div>
-                <div class="col navbar-links">
-                    <a href="#">Portfolio</a>
+                <div class="col-10 navbar-links">
+                    <ul>
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">About</a>
+                        </li>
+                        <li>
+                            <a href="#">Portfolio</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact</a>
+                        </li>
+                    </ul>
+
                 </div>
             </div>
         </div>
@@ -35,17 +40,21 @@
     <footer>
         <div class="container container-fluid">
             <div class="row footer">
-                <div class="col social-links">
-                    <a href="#">Instagram</a>
-                </div>
-                <div class="col social-links">
-                    <a href="#">Linkedin</a>
-                </div>
-                <div class="col social-links">
-                    <a href="#">Facebook</a>
-                </div>
-                <div class="col social-links">
-                    <a href="#">GitHub</a>
+                <div class="col-10 social-links">
+                    <ul>
+                        <li>
+                            <a href="#">Facebook</a>
+                        </li>
+                        <li>
+                            <a href="#">Instagram</a>
+                        </li>
+                        <li>
+                            <a href="#">Linkedin</a>
+                        </li>
+                        <li>
+                            <a href="#">GitHub</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
