--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header>
+    <navbar>
         <div class="container container-fluid">
             <div class="row navbar">
                 <div class="col-10 navbar-links">
@@ -35,7 +35,15 @@
                 </div>
             </div>
         </div>
-    </header>
+    </navbar>
+
+
+    <div class="intro-text col-4 jumbotrom jumbotron-fluid">
+        <h3>If you can think of it, i can create it!</h3>
+        <p>Creativity in design, mindset and solution</p>
+
+    </div>
+
 
     <footer>
         <div class="container container-fluid">
