navbar uppercase, footer links changed to icons

--- a/index.html
+++ b/index.html
@@ -13,54 +13,54 @@
 </head>
 
 <body>
-    <navbar>
-        <div class="container container-fluid">
-            <div class="row navbar">
-                <div class="col-10 navbar-links">
-                    <ul>
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li>
-                            <a href="#">About</a>
-                        </li>
-                        <li>
-                            <a href="#">Portfolio</a>
-                        </li>
-                        <li>
-                            <a href="#">Contact</a>
-                        </li>
-                    </ul>
+    <div class="container container-fluid">
+        <div class="row navbar uppercase">
+            <div class="container navbar-links">
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
 
-                </div>
             </div>
         </div>
-    </navbar>
-
-
-    <div class="intro-text col-4 jumbotrom jumbotron-fluid">
-        <h3>If you can think of it, i can create it!</h3>
-        <p>Creativity in design, mindset and solution</p>
-
     </div>
+
 
 
     <footer>
         <div class="container container-fluid">
             <div class="row footer">
-                <div class="col-10 social-links">
+                <div class="container social-links">
                     <ul>
                         <li>
-                            <a href="#">Facebook</a>
+                            <a href="#" title="Visit my Facebook pages"><i class="fab fa-facebook"></i></a>
+                            <span class="sr-only">Facebook</span>
                         </li>
                         <li>
-                            <a href="#">Instagram</a>
+                            <a href="#" title="Visit my Instagram account"><i class="fab fa-instagram"></i></a>
+                            <span class="sr-only">Instagram</span>
                         </li>
                         <li>
-                            <a href="#">Linkedin</a>
+                            <a href="#" title="Visit my Linkedin account"><i class="fab fa-linkedin"></i></a>
+                            <span class="sr-only">Linkedin</span>
                         </li>
                         <li>
-                            <a href="#">GitHub</a>
+                            <a href="#" title="Visit my GitHub account"><i class="fab fa-github"></i></a>
+                            <span class="sr-only">GitHub</span>
+                        </li>
+                        <li>
+                            <a href="#" title="Download my resume"><i class="fas fa-file-download"></i></a>
+                            <span class="sr-only">Resume</span>
                         </li>
                     </ul>
                 </div>
