navbar and footer updated

--- a/index.html
+++ b/index.html
@@ -34,32 +34,35 @@
             </div>
         </div>
     </div>
+    
+    
+
 
 
 
     <footer>
         <div class="container container-fluid">
             <div class="row footer">
-                <div class="container social-links">
+                <div class="container">
                     <ul>
                         <li>
-                            <a href="#" title="Visit my Facebook pages"><i class="fab fa-facebook"></i></a>
+                            <a href="#" title="Visit my Facebook pages"><i class="fab fa-facebook social-links"></i></a>
                             <span class="sr-only">Facebook</span>
                         </li>
                         <li>
-                            <a href="#" title="Visit my Instagram account"><i class="fab fa-instagram"></i></a>
+                            <a href="#" title="Visit my Instagram account"><i class="fab fa-instagram social-links"></i></a>
                             <span class="sr-only">Instagram</span>
                         </li>
                         <li>
-                            <a href="#" title="Visit my Linkedin account"><i class="fab fa-linkedin"></i></a>
+                            <a href="#" title="Visit my Linkedin account"><i class="fab fa-linkedin social-links"></i></a>
                             <span class="sr-only">Linkedin</span>
                         </li>
                         <li>
-                            <a href="#" title="Visit my GitHub account"><i class="fab fa-github"></i></a>
+                            <a href="#" title="Visit my GitHub account"><i class="fab fa-github social-links"></i></a>
                             <span class="sr-only">GitHub</span>
                         </li>
                         <li>
-                            <a href="#" title="Download my resume"><i class="fas fa-file-download"></i></a>
+                            <a href="#" title="Download my resume"><i class="fas fa-file-download  social-links"></i></a>
                             <span class="sr-only">Resume</span>
                         </li>
                     </ul>
