started work on dropdown navbar for mobile view

--- a/index.html
+++ b/index.html
@@ -3,33 +3,54 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/adecd2bab8.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Karla:200,200i,400,400i,700,700i,800,800i&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" ">
+    <meta http-equiv="X-UA-Compatible " content="ie=edge ">
+    <link rel="stylesheet " href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css " integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T " crossorigin="anonymous ">
+    <script src="https://kit.fontawesome.com/adecd2bab8.js "></script>
+    <link href="https://fonts.googleapis.com/css?family=Karla:200,200i,400,400i,700,700i,800,800i&display=swap " rel="stylesheet ">
+    <link rel="stylesheet " href="css/style.css " type="text/css " />
     <title>Madis Tepp - Portfolio</title>
 </head>
 
 <body>
-    <div class="container container-fluid">
-        <div class="row navbar uppercase">
-            <div class="container navbar-links">
-                <ul>
-                    <li>
-                        <a href="#">Home</a>
+
+<!--parts of code for below navbar taken from bootstrap-->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light ">
+ <a class="navbar-brand " href="# "></a>
+  <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarNavDropdown " aria-controls="navbarNavDropdown " aria-expanded="false " aria-label="Toggle navigation ">
+    <span class="navbar-toggler-icon "></span>
+  </button>
+    <div class="container container-fluid collapse navbar-collapse " id="navbarNavDropdown ">
+        <div class="row uppercase ">
+            <div class="container navbar-links ">
+            <div class="collapse navbar-collapse ">
+                <ul class="navbar-nav mr-auto ">
+                    <li class="nav-item active ">
+                        <a class="nav-link " href="# ">Home</a>
                     </li>
-                    <li>
-                        <a href="#">About</a>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="# ">About</a>
                     </li>
-                    <li>
-                        <a href="#">Portfolio</a>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="# ">Portfolio</a>
                     </li>
-                    <li>
-                        <a href="#">Contact</a>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="# ">Contact</a>
+                    </li>
+                       <li class="nav-item dropdown ">
+                        <a class="nav-link dropdown-toggle " href="# " id="navbarDropdown " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
+                         Dropdown
+                        </a>
+                        <div class="dropdown-menu " aria-labelledby="navbarDropdown ">
+                        <a class="dropdown-item " href="# ">Action</a>
+                        <a class="dropdown-item " href="# ">Another action</a>
+                        <div class="dropdown-divider "></div>
+                        <a class="dropdown-item " href="# ">Something else here</a>
+                    </div>
                     </li>
                 </ul>
+                </div>
 
             </div>
         </div>
@@ -41,29 +62,29 @@
 
 
     <footer>
-        <div class="container container-fluid">
-            <div class="row footer">
-                <div class="container">
+        <div class="container container-fluid ">
+            <div class="row footer ">
+                <div class="container ">
                     <ul>
                         <li>
-                            <a href="#" title="Visit my Facebook pages"><i class="fab fa-facebook social-links"></i></a>
-                            <span class="sr-only">Facebook</span>
+                            <a href="# " title="Visit my Facebook pages "><i class="fab fa-facebook social-links "></i></a>
+                            <span class="sr-only ">Facebook</span>
                         </li>
                         <li>
-                            <a href="#" title="Visit my Instagram account"><i class="fab fa-instagram social-links"></i></a>
-                            <span class="sr-only">Instagram</span>
+                            <a href="# " title="Visit my Instagram account "><i class="fab fa-instagram social-links "></i></a>
+                            <span class="sr-only ">Instagram</span>
                         </li>
                         <li>
-                            <a href="#" title="Visit my Linkedin account"><i class="fab fa-linkedin social-links"></i></a>
-                            <span class="sr-only">Linkedin</span>
+                            <a href="# " title="Visit my Linkedin account "><i class="fab fa-linkedin social-links "></i></a>
+                            <span class="sr-only ">Linkedin</span>
                         </li>
                         <li>
-                            <a href="#" title="Visit my GitHub account"><i class="fab fa-github social-links"></i></a>
-                            <span class="sr-only">GitHub</span>
+                            <a href="# " title="Visit my GitHub account "><i class="fab fa-github social-links "></i></a>
+                            <span class="sr-only ">GitHub</span>
                         </li>
                         <li>
-                            <a href="#" title="Download my resume"><i class="fas fa-file-download  social-links"></i></a>
-                            <span class="sr-only">Resume</span>
+                            <a href="# " title="Download my resume "><i class="fas fa-file-download social-links "></i></a>
+                            <span class="sr-only ">Resume</span>
                         </li>
                     </ul>
                 </div>
