--- a/index.html
+++ b/index.html
@@ -14,49 +14,29 @@
 
 <body>
 
-<!--parts of code for below navbar taken from bootstrap-->
+<!--parts of code for below navbar taken from bootstrap for mobile view dropdown menu-->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light ">
- <a class="navbar-brand " href="# "></a>
-  <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarNavDropdown " aria-controls="navbarNavDropdown " aria-expanded="false " aria-label="Toggle navigation ">
+<nav class="navbar navbar-expand-lg navbar-light ">
+    <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarNavDropdown " aria-controls="navbarNavDropdown " aria-expanded="false " aria-label="Toggle navigation ">
     <span class="navbar-toggler-icon "></span>
   </button>
-    <div class="container container-fluid collapse navbar-collapse " id="navbarNavDropdown ">
-        <div class="row uppercase ">
-            <div class="container navbar-links ">
-            <div class="collapse navbar-collapse ">
-                <ul class="navbar-nav mr-auto ">
-                    <li class="nav-item active ">
-                        <a class="nav-link " href="# ">Home</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="# ">About</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="# ">Portfolio</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="# ">Contact</a>
-                    </li>
-                       <li class="nav-item dropdown ">
-                        <a class="nav-link dropdown-toggle " href="# " id="navbarDropdown " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
-                         Dropdown
-                        </a>
-                        <div class="dropdown-menu " aria-labelledby="navbarDropdown ">
-                        <a class="dropdown-item " href="# ">Action</a>
-                        <a class="dropdown-item " href="# ">Another action</a>
-                        <div class="dropdown-divider "></div>
-                        <a class="dropdown-item " href="# ">Something else here</a>
-                    </div>
-                    </li>
-                </ul>
-                </div>
-
-            </div>
-        </div>
+    <div class="container container-fluid collapse-navbar navbar-links " id="navbarNavDropdown ">
+        <ul class="navbar-nav">
+            <li class="nav-item active ">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="#">Contact</a>
+            </li>
+        </ul>
     </div>
-    
-    
+</nav>
 
 
 
