--- a/index.html
+++ b/index.html
@@ -14,25 +14,27 @@
 
 <body>
 
-<!--parts of code for below navbar taken from bootstrap for mobile view dropdown menu-->
 
-<nav class="navbar navbar-expand-lg navbar-light ">
-    <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarNavDropdown " aria-controls="navbarNavDropdown " aria-expanded="false " aria-label="Toggle navigation ">
+
+<nav class="navbar navbar-expand-lg navbar-light">
+  <a class="navbar-brand " href="index.html"><h2>MT Creative Labs</h2></a>
+    <button class="navbar-toggler " type="button " data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="#navbarSupportedContent" aria-expanded="false " aria-label="Toggle navigation ">
     <span class="navbar-toggler-icon "></span>
   </button>
-    <div class="container container-fluid collapse-navbar navbar-links " id="navbarNavDropdown ">
-        <ul class="navbar-nav">
-            <li class="nav-item active ">
-                <a class="nav-link" href="#">Home</a>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto ">
+            <li class="nav-item active list-color">
+                <a class="nav-link " href="# ">Home<span class="sr-only ">(current)</span></a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link " href="# ">About</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link " href="# ">Portfolio</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link " href="# ">Contact</a>
             </li>
         </ul>
     </div>
@@ -72,6 +74,10 @@
         </div>
     </footer>
 
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 
