--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand " href="index.html"><h2>MT Creative Labs</h2></a>
+  <a href="index.html"><h2>MT Creative Labs</h2></a>
     <button class="navbar-toggler " type="button " data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="#navbarSupportedContent" aria-expanded="false " aria-label="Toggle navigation ">
     <span class="navbar-toggler-icon "></span>
   </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto ">
-            <li class="nav-item active list-color">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
                 <a class="nav-link " href="# ">Home<span class="sr-only ">(current)</span></a>
             </li>
             <li class="nav-item ">
@@ -43,13 +43,11 @@
 
 
 
-    <footer>
-        <div class="container container-fluid ">
-            <div class="row footer ">
-                <div class="container ">
+
+            <div class="footer container-fluid">
                     <ul>
                         <li>
-                            <a href="# " title="Visit my Facebook pages "><i class="fab fa-facebook social-links "></i></a>
+                            <a href="# " title="Visit my Facebook pages"><i class="fab fa-facebook social-links "></i></a>
                             <span class="sr-only ">Facebook</span>
                         </li>
                         <li>
@@ -70,9 +68,6 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-        </div>
-    </footer>
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
