minor text update

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/adecd2bab8.js "></script>
     <link href="https://fonts.googleapis.com/css?family=Karla:200,200i,400,400i,700,700i,800,800i&display=swap " rel="stylesheet ">
     <link rel="stylesheet " href="css/style.css " type="text/css " />
-    <title>Madis Tepp - Portfolio</title>
+    <title>Madis Tepp</title>
 </head>
 
 <body>
