--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <script src="https://kit.fontawesome.com/adecd2bab8.js "></script>
     <link href="https://fonts.googleapis.com/css?family=Karla:200,200i,400,400i,700,700i,800,800i&display=swap " rel="stylesheet ">
     <link rel="stylesheet " href="css/style.css " type="text/css " />
-    <title>Madis Tepp - Portfolio</title>
+    <title>Madis Tepp</title>
 </head>
 
 <body>
 
 
 
-<nav class="navbar navbar-expand-lg navbar-light">
-  <a href="index.html"><h2>MT Creative Labs</h2></a>
-    <button class="navbar-toggler " type="button " data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="#navbarSupportedContent" aria-expanded="false " aria-label="Toggle navigation ">
+<nav class="navbar navbar-expand-lg navbar-light ">
+  <a class="navbar-brand" href="index.html "><h2>MT Creative Labs</h2></a>
+    <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarSupportedContent " aria-controls="#navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation ">
     <span class="navbar-toggler-icon "></span>
   </button>
   
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent ">
+        <ul class="navbar-nav ">
+            <li class="nav-item active ">
                 <a class="nav-link " href="# ">Home<span class="sr-only ">(current)</span></a>
             </li>
             <li class="nav-item ">
@@ -44,10 +44,10 @@
 
 
 
-            <div class="footer container-fluid">
+            <div class="footer container-fluid ">
                     <ul>
                         <li>
-                            <a href="# " title="Visit my Facebook pages"><i class="fab fa-facebook social-links "></i></a>
+                            <a href="# " title="Visit my Facebook pages "><i class="fab fa-facebook social-links "></i></a>
                             <span class="sr-only ">Facebook</span>
                         </li>
                         <li>
@@ -70,9 +70,9 @@
                 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
 
 </body>
 
