header issues fixed, content started for index.html

--- a/index.html
+++ b/index.html
@@ -40,9 +40,22 @@
     </nav>
 
 
-
-
-
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            <h4>Welcome to MT Design</h4>
+            <p>Have a look, get inspired and contact us for co-operation</p>
+        </div>
+    </div>
+</div>
+<div class="container">
+  
+    <div class="row">
+    <div class="col-sm">
+        <img src="">
+    </div>
+</div>
+</div>
 
 
 
