content justify left/right added to move content to opposite sides

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 
-<body>
+<body>        
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">MT Design</a>
@@ -41,21 +41,23 @@
 
 
 <div class="container">
-    <div class="row">
-        <div class="col-sm">
+    <div class="row justify-content-between">
+        <div class="col-4">
             <h4>Welcome to MT Design</h4>
             <p>Have a look, get inspired and contact us for co-operation</p>
         </div>
     </div>
 </div>
 <div class="container">
-  
-    <div class="row">
-    <div class="col-sm">
-        <img src="">
+    <div class="row justify-content-end">
+        <div class="col-4 jumbotron intro-image">
+            <img src="assets/images/Madis image.png.jpg" class="intro-image">
+        </div>
     </div>
 </div>
-</div>
+
+
+
 
 
 
