--- a/index.html
+++ b/index.html
@@ -39,18 +39,20 @@
         </div>
     </nav>
 
+    < <div class="container">
+        <div class="row">
+            <div class="col-sm-4 index-text-style jumbotron">
+                <h4>Hi I'm Madis Tepp</h4>
+                <p>I am a full stack developer and can help you turn your craziest website ideas to reality</p>
+                <p>Have a look around, get inspired and contact me for co-operation</p>
+            </div>
+        </div>
+</div>
+
 
 <div class="container">
-    <div class="row justify-content-between">
-        <div class="col-4">
-            <h4>Welcome to MT Design</h4>
-            <p>Have a look, get inspired and contact us for co-operation</p>
-        </div>
-    </div>
-</div>
-<div class="container">
     <div class="row justify-content-end">
-        <div class="col-4 jumbotron intro-image">
+        <div class="col-sm-4  intro-image">
             <img src="assets/images/Madis image.png.jpg" class="intro-image">
         </div>
     </div>
