pic removed from index.html

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         </div>
     </nav>
 
-    < <div class="container">
+     <div class="container">
         <div class="row">
-            <div class="col-sm-4 index-text-style jumbotron">
-                <h4>Hi I'm Madis Tepp</h4>
+            <div class="col-12 index-text-style jumbotron">
+                <h1>Hi I'm Madis Tepp</h1>
                 <p>I am a full stack developer and can help you turn your craziest website ideas to reality</p>
                 <p>Have a look around, get inspired and contact me for co-operation</p>
             </div>
@@ -50,13 +50,7 @@
 </div>
 
 
-<div class="container">
-    <div class="row justify-content-end">
-        <div class="col-sm-4  intro-image">
-            <img src="assets/images/Madis image.png.jpg" class="intro-image">
-        </div>
-    </div>
-</div>
+
 
 
 
