--- a/aboutme.html
+++ b/aboutme.html
@@ -41,7 +41,19 @@
 
 
 
-
+<div class="container">
+    <div class="row table">
+        <div class="col-6 container">
+            <h3>Work history</h3>
+        </div>
+    </div>
+    <div class="col-6 container">
+        <h3>About me</h3>
+    </div>
+    <div class="col-6 container">
+        <h3>Skills</h3>
+    </div>
+</div>
 
 
 
