content placement done

--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
 
 <body>        
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
   <a class="navbar-brand" href="#">MT Design</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -42,16 +42,32 @@
 
 
 <div class="container">
-    <div class="row table">
-        <div class="col-6 container">
+    <div class="row">
+        <div class="col-6">
+            <h3>About me</h3>
+            <p>I am full stack developer with a vast background in process management. I enjoy creating high-quality creative solutions for clients. There is no problem i cannot solve, or any wild idea i cannot create</p>
+        </div>
+
+        <div class="col-6">
             <h3>Work history</h3>
+            <ul>
+                09.2019 – UNTIL FURTHER
+                <li>BUSINESS PRODUCT OWNER CHAT-BOT (TEMPORARY POSITION), SCANDINAVIAN AIRLINES</li>
+                <li>03.2018 – CURRENT PROCESS OWNER, SCANDINAVIAN AIRLINES</li>
+                <li>01.2016 – 03.2018 SKILL MANAGER, SCANDINAVIAN AIRLINES </li>
+                <li>03.2018 – CURRENT SUPER USER, SCANDINAVIAN AIRLINES</li>
+            </ul>
         </div>
     </div>
-    <div class="col-6 container">
-        <h3>About me</h3>
-    </div>
-    <div class="col-6 container">
-        <h3>Skills</h3>
+
+    <div class="row">
+        <div class="col-6">
+            <h3>image</h3>
+        </div>
+        <div class="col-6">
+            <h3>Skills</h3>
+            <p>I use design thinking in creating solutions. HTML5, CSS3, Python, and JavaScript along with Flask and Django Framework</p>
+        </div>
     </div>
 </div>
 
