--- a/aboutme.html
+++ b/aboutme.html
@@ -23,11 +23,11 @@
   
    <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="# ">Home<span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="# ">About</a>
+                    <a class="nav-link" href="# ">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="# ">About<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="# ">Portfolio</a>
@@ -44,43 +44,46 @@
 <div class="container">
     <div class="row">
         <div class="col-6 about">
-            <h3>About me</h3>
-            <p>I am full stack developer with a vast background in process management. I enjoy creating high-quality creative solutions for clients. There is no problem i cannot solve, or any wild idea i cannot create</p>
+            <h4>About me</h4>
+            <p class="about-me-p">I am full stack developer with a vast background in process management. I enjoy creating high-quality creative solutions for clients. There is no problem i cannot solve, or any wild idea i cannot create</p>
+        </div>
+        <div class="col-6 about-image">
+            <h5>image</h5>
         </div>
 
-        <div class="col-6 work-history">
-            <h3>Work history:</h3>
-            <h4>Scandinavian Airlines</h4>
-            <p>09.2019–..</p>
-            <p>Business Product Owner chat-bot (TEMPORARY POSITION)</p>
-            <h4>Scandinavian Airlines</h4>
-            <p>03.2018–..</p>
-            <p>Process owner</p>
-            <h4>Scandinavian Airlines</h4>
-            <p>01.2016–03.2018</p>
-            <p>Skill Manager</p>
-            <h4>Scandinavian Airlines</h4>
-            <p>10.2013–01.2016</p>
-            <p>Super user</p>
-            
-        </div>
+
+
     </div>
 
     <div class="row">
-        <div class="col-6 about-image">
-            <h3>image</h3>
-        </div>
         <div class="col-6 skills">
-            <h3>Skills</h3>
-            <p>I use design thinking in creating solutions. HTML5, CSS3, Python, and JavaScript along with Flask and Django Framework</p>
+            <h4>Skills</h4>
+            <p class="about-me-p">I use design thinking in creating solutions. HTML5, CSS3, Python, and JavaScript along with Flask and Django Framework</p>
         </div>
+        <div class="col-6 work-history">
+            <h4>Work history</h4>
+            <h6>Scandinavian Airlines</h6>
+            <p class="about-me-p">09.2019–..</p>
+            <p class="about-me-p">Business Product Owner chat-bot (TEMPORARY POSITION)</p>
+            <h6>Scandinavian Airlines</h6>
+            <p class="about-me-p">03.2018–..</p>
+            <p class="about-me-p">Process owner</p>
+            <h6>Scandinavian Airlines</h6>
+            <p class="about-me-p">01.2016–03.2018</p>
+            <p class="about-me-p">Skill Manager</p>
+            <h6>Scandinavian Airlines</h6>
+            <p class="about-me-p">10.2013–01.2016</p>
+            <p class="about-me-p">Super user</p>
+
+        </div>
+
     </div>
 </div>
 
 
 
 
-    <div class="footer container-fluid ">
+    <div class="footer fixed-bottom container-fluid ">
                 <a href="# " title="Visit my Facebook pages "><i class="fab fa-facebook social-links "></i></a>
                 <span class="sr-only ">Facebook</span>
                 <a href="# " title="Visit my Instagram account "><i class="fab fa-instagram social-links "></i></a>
