progress bar for skills, mobile row positioning changed

--- a/aboutme.html
+++ b/aboutme.html
@@ -43,24 +43,41 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-6 about">
+        <div class="col-xs-12 col-sm-6 about">
             <h4>About me</h4>
             <p class="about-me-p">I am full stack developer with a vast background in process management. I enjoy creating high-quality creative solutions for clients. There is no problem i cannot solve, or any wild idea i cannot create</p>
         </div>
-        <div class="col-6 about-image">
+        <div class="col-xs-12 col-sm-6 about-image">
             <h5>image</h5>
         </div>
-
-
-
     </div>
 
-    <div class="row">
-        <div class="col-6 skills">
-            <h4>Skills</h4>
-            <p class="about-me-p">I use design thinking in creating solutions. HTML5, CSS3, Python, and JavaScript along with Flask and Django Framework</p>
+<div class="row">
+    <div class="col-xs-12 col-sm-6 skills">
+        <h4>Skills</h4>
+        <p class="about-me-p">CSS3</p>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
-        <div class="col-6 work-history">
+        <p class="about-me-p">HTML5</p>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <p class="about-me-p">DJANGO/PYTHON</p>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <p class="about-me-p">JAVASCRIPT</p>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 7%" aria-valuenow="7" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <p class="about-me-p">NO SQL/SQL</p>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 4%" aria-valuenow="4" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+    </div>
+    
+        <div class="col-xs-12 col-sm-6 work-history">
             <h4>Work history</h4>
             <h6>Scandinavian Airlines</h6>
             <p class="about-me-p">09.2019–..</p>
