pic added, layout updated for desktop view, content updated

--- a/aboutme.html
+++ b/aboutme.html
@@ -42,55 +42,57 @@
 
 
 <div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 about">
+    <div class="row justify-content-around">
+        <div class="col-xs-12 col-sm-4 about">
             <h4>About me</h4>
-            <p class="about-me-p">I am full stack developer with a vast background in process management. I enjoy creating high-quality creative solutions for clients. There is no problem i cannot solve, or any wild idea i cannot create</p>
+            <p class="about-me-p">I am full stack developer with a vast background in process management. I enjoy creating high-quality creative solutions for clients. There is no problem i cannot solve, or any wild idea i cannot create.</p>
         </div>
-        <div class="col-xs-12 col-sm-6 about-image">
-            <h5>image</h5>
+        <div class="col-xs-12 col-sm-4 about-image-container">
+            <img class="about-image" src="assets/images/IMG_7786.jpeg">
         </div>
     </div>
 
-<div class="row">
-    <div class="col-xs-12 col-sm-6 skills">
-        <h4>Skills</h4>
-        <p class="about-me-p">CSS3</p>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="row justify-content-around">
+        <div class="col-xs-12 col-sm-4 skills">
+            <h4>Skills</h4>
+            <p class="about-me-p">CSS3</p>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <p class="about-me-p">HTML5</p>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <p class="about-me-p">DJANGO/PYTHON</p>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <p class="about-me-p">JAVASCRIPT</p>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 7%" aria-valuenow="7" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <p class="about-me-p">NO SQL/SQL</p>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 4%" aria-valuenow="4" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
         </div>
-        <p class="about-me-p">HTML5</p>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <p class="about-me-p">DJANGO/PYTHON</p>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <p class="about-me-p">JAVASCRIPT</p>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 7%" aria-valuenow="7" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <p class="about-me-p">NO SQL/SQL</p>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 4%" aria-valuenow="4" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-    </div>
-    
-        <div class="col-xs-12 col-sm-6 work-history">
+
+        <div class="col-xs-12 col-sm-4 work-history">
             <h4>Work history</h4>
-            <h6>Scandinavian Airlines</h6>
-            <p class="about-me-p">09.2019–..</p>
-            <p class="about-me-p">Business Product Owner chat-bot (TEMPORARY POSITION)</p>
-            <h6>Scandinavian Airlines</h6>
-            <p class="about-me-p">03.2018–..</p>
-            <p class="about-me-p">Process owner</p>
-            <h6>Scandinavian Airlines</h6>
-            <p class="about-me-p">01.2016–03.2018</p>
-            <p class="about-me-p">Skill Manager</p>
-            <h6>Scandinavian Airlines</h6>
-            <p class="about-me-p">10.2013–01.2016</p>
-            <p class="about-me-p">Super user</p>
+            <ul class="work-history-style">
+                <h6>Scandinavian Airlines</h6>
+                <li class="about-me-p">09.2019–..</li>
+                <li class="about-me-p">Business Product Owner chat-bot (TEMPORARY POSITION)</li>
+                <h6>Scandinavian Airlines</h6>
+                <li class="about-me-p">03.2018–..</li>
+                <li class="about-me-p">Process owner</li>
+                <h6>Scandinavian Airlines</h6>
+                <li class="about-me-p">01.2016–03.2018</li>
+                <li class="about-me-p">Skill Manager</li>
+                <h6>Scandinavian Airlines</h6>
+                <li class="about-me-p">10.2013–01.2016</li>
+                <li class="about-me-p">Super user</li>
+            </ul>
 
         </div>
 
