text updates to about section

--- a/aboutme.html
+++ b/aboutme.html
@@ -45,7 +45,11 @@
     <div class="row justify-content-around">
         <div class="col-xs-12 col-sm-4 about">
             <h4>About me</h4>
-            <p class="about-me-p">I am full stack developer with a vast background in process management. I enjoy creating high-quality creative solutions for clients. There is no problem i cannot solve, or any wild idea i cannot create.</p>
+            <p class="about-me-p">I am a full stack developer with a vast background in process management.
+            I enjoy creating high-quality creative solutions for clients. <br>
+            Before switching careers to web development i have worked as a process expert and i have a vast experience from customer service operations.
+            I enjoy creating success in teams, design solutions for customers and do it all with a data-driven, creative approach.<br>
+            As a problem solver by nature, there is no problem i cannot solve, or any wild idea i cannot create.</p>
         </div>
         <div class="col-xs-12 col-sm-4 about-image-container">
             <img class="about-image" src="assets/images/IMG_7786.jpeg">
@@ -57,23 +61,23 @@
             <h4>Skills</h4>
             <p class="about-me-p">CSS3</p>
             <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
             </div>
             <p class="about-me-p">HTML5</p>
             <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">65%</div>
             </div>
             <p class="about-me-p">DJANGO/PYTHON</p>
             <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">5%</div>
             </div>
             <p class="about-me-p">JAVASCRIPT</p>
             <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 7%" aria-valuenow="7" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 7%" aria-valuenow="7" aria-valuemin="0" aria-valuemax="100">7%</div>
             </div>
             <p class="about-me-p">NO SQL/SQL</p>
             <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 4%" aria-valuenow="4" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 4%" aria-valuenow="4" aria-valuemin="0" aria-valuemax="100">4%</div>
             </div>
         </div>
 
