--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 
 <body>        
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
   <a class="navbar-brand" href="#">MT Design</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -23,11 +23,11 @@
   
    <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="# ">Home<span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="# ">About</a>
+                    <a class="nav-link" href="# ">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="# ">About<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="# ">Portfolio</a>
@@ -44,30 +44,17 @@
 
 
 
-
-    <div class="footer container-fluid ">
-        <ul>
-            <li>
+<div class="footer fixed-bottom container-fluid ">
                 <a href="# " title="Visit my Facebook pages "><i class="fab fa-facebook social-links "></i></a>
                 <span class="sr-only ">Facebook</span>
-            </li>
-            <li>
                 <a href="# " title="Visit my Instagram account "><i class="fab fa-instagram social-links "></i></a>
                 <span class="sr-only ">Instagram</span>
-            </li>
-            <li>
                 <a href="# " title="Visit my Linkedin account "><i class="fab fa-linkedin social-links "></i></a>
                 <span class="sr-only ">Linkedin</span>
-            </li>
-            <li>
                 <a href="# " title="Visit my GitHub account "><i class="fab fa-github social-links "></i></a>
                 <span class="sr-only ">GitHub</span>
-            </li>
-            <li>
                 <a href="# " title="Download my resume "><i class="fas fa-file-download social-links "></i></a>
                 <span class="sr-only ">Resume</span>
-            </li>
-        </ul>
     </div>
     
     
