col elements changed, h1 element updated for portfolio

--- a/aboutme.html
+++ b/aboutme.html
@@ -43,7 +43,7 @@
 
 <div class="container">
     <div class="row justify-content-around">
-        <div class="col-xs-12 col-sm-4 about">
+        <div class="col-sm-12 col-md-4 about">
             <h4>About me</h4>
             <p class="about-me-p">I am a full stack developer with a vast background in process management.
             I enjoy creating high-quality creative solutions for clients. <br>
@@ -51,13 +51,13 @@
             I enjoy creating success in teams, design solutions for customers and do it all with a data-driven, creative approach.<br>
             As a problem solver by nature, there is no problem i cannot solve, or any wild idea i cannot create.</p>
         </div>
-        <div class="col-xs-12 col-sm-4 about-image-container">
+        <div class="col-sm-12 col-md-4 about-image-container">
             <img class="about-image" src="assets/images/IMG_7786.jpeg">
         </div>
     </div>
 
     <div class="row justify-content-around">
-        <div class="col-xs-12 col-sm-4 skills">
+        <div class="col-sm-12 col-md-4 skills">
             <h4>Skills</h4>
             <p class="about-me-p">CSS3</p>
             <div class="progress">
@@ -81,7 +81,7 @@
             </div>
         </div>
 
-        <div class="col-xs-12 col-sm-4 work-history">
+        <div class="col-sm-12 col-md-4 work-history">
             <h4>Work history</h4>
             <ul class="work-history-style">
                 <h6>Scandinavian Airlines</h6>
