--- a/portfolio.html
+++ b/portfolio.html
@@ -41,34 +41,48 @@
 
 
 <div class="container">
+    <div class="row justify-content-center portfolio-heading">
+    <h1>Check out my works below!</h1>
+    </div>
     <div class="row justify-content-around">
-        <div class="col-xs-12 col-sm-4 works-done">
+        <div class="col-sm-12 col-md-4 works-done">
             <p class="portfolio-p">Work for created for client in need of e-commerce platform for their product</p>
+            <a href="https://www.awwwards.com/" target="_blank">
             <img class="portfolio-image" src="assets/images/awwards.PNG">
+            </a>
         </div>
-        <div class="col-xs-12 col-sm-4 works-done">
+        <div class="col-sm-12 col-md-4 works-done">
             <p class="portfolio-p">Work for created for client in need of in-house communication platform for their employees</p>
+            <a href="https://www.awwwards.com/" target="_blank">
             <img class="portfolio-image" src="assets/images/awwards.PNG">
+            </a>
         </div>
     </div>
     
        <div class="row justify-content-center">
-        <div class="col-xs-12 col-sm-4 works-done">
+        <div class="col-sm-12 col-md-4 works-done">
             <p class="portfolio-p">Work for created for client in need of in-house communication platform for their employees</p>
+            <a href="https://www.awwwards.com/" target="_blank">
             <img class="portfolio-image" src="assets/images/awwards.PNG">
+            </a>
         </div>
     </div>
 
 
 
     <div class="row justify-content-around">
-        <div class="col-xs-12 col-sm-4 works-done">
+        <div class="col-sm-12 col-md-4 works-done">
             <p class="portfolio-p">Work for created for client in need of in-house communication platform for their employees</p>
+            <a href="https://www.awwwards.com/" target="_blank">
             <img class="portfolio-image" src="assets/images/awwards.PNG">
+            </a>
         </div>
-        <div class="col-xs-12 col-sm-4 works-done">
+        
+        <div class="col-sm-12 col-md-4 works-done">
             <p class="portfolio-p">Work for created for client in need of in-house communication platform for their employees</p>
+            <a href="https://www.awwwards.com/" target="_blank">
             <img class="portfolio-image" src="assets/images/awwards.PNG">
+            </a>
         </div>
     </div>
 </div>
