--- a/portfolio.html
+++ b/portfolio.html
@@ -46,13 +46,13 @@
     </div>
     <div class="row justify-content-around">
         <div class="col-sm-12 col-md-4 works-done">
-            <p class="portfolio-p">Work for created for client in need of e-commerce platform for their product</p>
+            <p class="portfolio-p">Created for client in need of e-commerce platform for their product</p>
             <a href="https://www.awwwards.com/" target="_blank">
             <img class="portfolio-image" src="assets/images/awwards.PNG">
             </a>
         </div>
         <div class="col-sm-12 col-md-4 works-done">
-            <p class="portfolio-p">Work for created for client in need of in-house communication platform for their employees</p>
+            <p class="portfolio-p">Created for client in need of in-house communication platform for their employees</p>
             <a href="https://www.awwwards.com/" target="_blank">
             <img class="portfolio-image" src="assets/images/awwards.PNG">
             </a>
@@ -61,7 +61,7 @@
     
        <div class="row justify-content-center">
         <div class="col-sm-12 col-md-4 works-done">
-            <p class="portfolio-p">Work for created for client in need of in-house communication platform for their employees</p>
+            <p class="portfolio-p">Created for client in need of in-house communication platform for their employees</p>
             <a href="https://www.awwwards.com/" target="_blank">
             <img class="portfolio-image" src="assets/images/awwards.PNG">
             </a>
@@ -72,14 +72,14 @@
 
     <div class="row justify-content-around">
         <div class="col-sm-12 col-md-4 works-done">
-            <p class="portfolio-p">Work for created for client in need of in-house communication platform for their employees</p>
+            <p class="portfolio-p">Created for client in need of in-house communication platform for their employees</p>
             <a href="https://www.awwwards.com/" target="_blank">
             <img class="portfolio-image" src="assets/images/awwards.PNG">
             </a>
         </div>
         
         <div class="col-sm-12 col-md-4 works-done">
-            <p class="portfolio-p">Work for created for client in need of in-house communication platform for their employees</p>
+            <p class="portfolio-p">Created for client in need of in-house communication platform for their employees</p>
             <a href="https://www.awwwards.com/" target="_blank">
             <img class="portfolio-image" src="assets/images/awwards.PNG">
             </a>
