--- a/contact.html
+++ b/contact.html
@@ -26,19 +26,50 @@
             <li class="nav-item">
                 <a class="nav-link" href="# ">Home</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item ">
                 <a class="nav-link" href="# ">About<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="# ">Portfolio</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="# ">Contact</a>
+            <li class="nav-item active">
+                <a class="nav-link" href="# ">Contact<span class="sr-only">(current)</span></a>
             </li>
         </ul>
     </div>
 </nav>
 
+<div class="container">
+
+    <form>
+        <div class="form-group row contact-page-style">
+            <div class="col-6">
+                <input type="text" class="form-control" placeholder="First name" required>
+            </div>
+        </div>
+        <div class="form-group row contact-page-style">
+            <div class="col-6">
+                <input type="text" class="form-control" placeholder="Last name" required>
+            </div>
+        </div>
+        <div class="form-group row contact-page-style">
+            <div class="col-6">
+                <input type="email" class="form-control" placeholder="Email" required>
+            </div>
+        </div>
+        <div class="form-group row contact-page-style">
+            <div class="col-6">
+                <input type="phone" class="form-control" placeholder="Phone number" required>
+            </div>
+        </div>
+        <div class="form-group row contact-page-style">
+            <div class="col-6">
+                <textarea class="form-control" placeholder="Project Info" required></textarea>
+            </div>
+            <button class="btn btn-primary" type="submit">Submit for estimation</button>
+        </div>
+    </form>
+</div>
 
 
 
